[gd_scene load_steps=53 format=3 uid="uid://dtjbrby2lwwfa"]

[ext_resource type="Script" uid="uid://bptg81vposyrs" path="res://Entities/Player/player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://c70h5atnw3u2f" path="res://Entities/Player/Dead.png" id="2_hj1c0"]
[ext_resource type="Texture2D" uid="uid://bwx5hjjdrjj88" path="res://Entities/Player/Idle.png" id="2_vweq0"]
[ext_resource type="Texture2D" uid="uid://ds3kay56rc0ej" path="res://Entities/Player/Run.png" id="3_1des2"]
[ext_resource type="Script" uid="uid://yrl0ghhvkkdg" path="res://Entities/UI/ui_control.gd" id="3_e80uo"]
[ext_resource type="Theme" uid="uid://blam67opkd3km" path="res://UI/theme.tres" id="5_t38ms"]
[ext_resource type="FontFile" uid="uid://dkfpclcycdhur" path="res://UI/smallest_pixel-7.ttf" id="6_hj1c0"]
[ext_resource type="Texture2D" uid="uid://cer15rd1a7kfl" path="res://UI/0.2.png" id="8_761t5"]
[ext_resource type="PackedScene" uid="uid://tk14juuejqmb" path="res://Entities/Item/Item.tscn" id="9_761t5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2hyx"]
atlas = ExtResource("2_hj1c0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhm1p"]
atlas = ExtResource("2_hj1c0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfyot"]
atlas = ExtResource("2_hj1c0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3245"]
atlas = ExtResource("2_hj1c0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1des2"]
atlas = ExtResource("2_vweq0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an6q6"]
atlas = ExtResource("2_vweq0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t38ms"]
atlas = ExtResource("2_vweq0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj1c0"]
atlas = ExtResource("2_vweq0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x44r4"]
atlas = ExtResource("2_vweq0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_761t5"]
atlas = ExtResource("2_vweq0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hacra"]
atlas = ExtResource("2_vweq0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jynvv"]
atlas = ExtResource("2_vweq0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmeus"]
atlas = ExtResource("2_vweq0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_061yh"]
atlas = ExtResource("2_vweq0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw7o4"]
atlas = ExtResource("2_vweq0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gallu"]
atlas = ExtResource("2_vweq0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_samso"]
atlas = ExtResource("3_1des2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl213"]
atlas = ExtResource("3_1des2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m37j"]
atlas = ExtResource("3_1des2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34i1"]
atlas = ExtResource("3_1des2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcmon"]
atlas = ExtResource("3_1des2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6pxy"]
atlas = ExtResource("3_1des2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l80rc"]
atlas = ExtResource("3_1des2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2mqv"]
atlas = ExtResource("3_1des2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgqku"]
atlas = ExtResource("3_1des2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80tt4"]
atlas = ExtResource("3_1des2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tepoh"]
atlas = ExtResource("3_1des2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h03de"]
atlas = ExtResource("3_1des2")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewrch"]
atlas = ExtResource("3_1des2")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8qxc"]
atlas = ExtResource("3_1des2")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvtm2"]
atlas = ExtResource("3_1des2")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8vwu"]
atlas = ExtResource("3_1des2")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbla8"]
atlas = ExtResource("3_1des2")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi0tq"]
atlas = ExtResource("3_1des2")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5u7s"]
atlas = ExtResource("3_1des2")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcvdc"]
atlas = ExtResource("3_1des2")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow4hj"]
atlas = ExtResource("3_1des2")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4d7x"]
atlas = ExtResource("3_1des2")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70klf"]
atlas = ExtResource("3_1des2")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hya8c"]
atlas = ExtResource("3_1des2")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_samso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2hyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhm1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfyot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3245")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1des2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an6q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t38ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj1c0")
}],
"loop": false,
"name": &"idleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x44r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_761t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hacra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jynvv")
}],
"loop": true,
"name": &"idleSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmeus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_061yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw7o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gallu")
}],
"loop": true,
"name": &"idleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_samso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl213")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m37j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcmon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6pxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l80rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2mqv")
}],
"loop": true,
"name": &"runDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgqku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80tt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tepoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h03de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewrch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8qxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvtm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8vwu")
}],
"loop": true,
"name": &"runSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbla8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi0tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5u7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcvdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow4hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4d7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70klf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hya8c")
}],
"loop": true,
"name": &"runUp",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t38ms"]
radius = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_kpjcp"]
font = ExtResource("6_hj1c0")
font_size = 90

[node name="Player" type="CharacterBody2D"]
collision_mask = 18
script = ExtResource("1_kpjcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_samso")
animation = &"dead"
frame = 1
frame_progress = 0.2690771

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t38ms")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="UIControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_e80uo")

[node name="GameOverScreen" type="Control" parent="UIControl"]
anchors_preset = 0
offset_left = -336.0
offset_top = -258.0
offset_right = 1565.7173
offset_bottom = 1196.6719
scale = Vector2(0.28185052, 0.28185052)

[node name="ColorRect" type="ColorRect" parent="UIControl/GameOverScreen"]
layout_mode = 0
offset_left = 425.75763
offset_top = 319.31818
offset_right = 1958.4851
offset_bottom = 1511.4395
color = Color(0, 0, 0, 0.3647059)

[node name="Label" type="Label" parent="UIControl/GameOverScreen"]
layout_mode = 0
offset_left = 482.5253
offset_top = 659.9243
offset_right = 1901.7173
offset_bottom = 783.0809
text = "You Have Been Slain"
label_settings = SubResource("LabelSettings_kpjcp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="UIControl/GameOverScreen"]
layout_mode = 0
offset_left = 993.4344
offset_top = 886.995
offset_right = 1390.8081
offset_bottom = 943.7627
theme = ExtResource("5_t38ms")
theme_override_font_sizes/font_size = 40
text = "Try Again"

[node name="MainMenu" type="Button" parent="UIControl/GameOverScreen"]
layout_mode = 0
offset_left = 993.4344
offset_top = 972.14655
offset_right = 1390.8079
offset_bottom = 1028.9143
theme = ExtResource("5_t38ms")
theme_override_font_sizes/font_size = 40
text = "Give Up"

[node name="SuccessScreen" type="Control" parent="UIControl"]
visible = false
anchors_preset = 0
offset_left = -336.0
offset_top = -258.0
offset_right = 2032.0
offset_bottom = 1534.0
scale = Vector2(0.28185052, 0.28185052)

[node name="ColorRect" type="ColorRect" parent="UIControl/SuccessScreen"]
layout_mode = 0
offset_left = -96.0
offset_top = -64.0
offset_right = 2560.0
offset_bottom = 1920.0
color = Color(0, 0, 0, 0.3647059)

[node name="Label" type="Label" parent="UIControl/SuccessScreen"]
layout_mode = 0
offset_left = 704.0
offset_top = 480.0
offset_right = 1658.0
offset_bottom = 809.0
text = "You Win"
label_settings = SubResource("LabelSettings_kpjcp")

[node name="NextLevel" type="Button" parent="UIControl/SuccessScreen"]
layout_mode = 0
offset_left = 704.0
offset_top = 832.0
offset_right = 1100.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 64
text = "Next Level"

[node name="Exit" type="Button" parent="UIControl/SuccessScreen"]
layout_mode = 0
offset_left = 1280.0
offset_top = 832.0
offset_right = 1664.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 64
text = "Exit"

[node name="TextBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dialogue" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = -192.0
offset_top = 72.0
offset_right = 192.0
offset_bottom = 139.0
theme = ExtResource("5_t38ms")
text = "Hello Everyone
"
autowrap_mode = 2

[node name="Label2" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 92.0
offset_top = 128.0
offset_right = 186.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_hj1c0")
theme_override_font_sizes/font_size = 8
text = "Press space to continue..."

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D2" type="Sprite2D" parent="HUD"]
position = Vector2(-176, -128)
scale = Vector2(0.5, 0.49999997)
texture = ExtResource("8_761t5")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="Item" parent="HUD" instance=ExtResource("9_761t5")]
position = Vector2(-176, -128)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="UIControl/GameOverScreen/Retry" to="UIControl" method="_on_retry_pressed"]
[connection signal="pressed" from="UIControl/GameOverScreen/MainMenu" to="UIControl" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UIControl/SuccessScreen/NextLevel" to="UIControl" method="_on_next_level_pressed"]
[connection signal="pressed" from="UIControl/SuccessScreen/Exit" to="UIControl" method="_on_exit_pressed"]
